--- a/notebook/dissertation.org
+++ b/notebook/dissertation.org
@@ -1,23 +1,73 @@
 * Introduction
 ** Problem Statement
+- All textual works are related.
+- Influencing Factors 
+  - Works Read by the Author
+  - Author's Background (cite a source for that one)
+  - Author's Original Contribution
+- Applications in Academia
+  - Measuring Impact
+  - Determining New Contributions in a Work
+  - Identifying Missing Citations
+- Applications in Authorship Determination
+  - Identify potential Co-Authors
+  - Identify Elements of Style
+  - Find and Isolate Each Author's Contributions
 ** Approach Overview
+- Word Frequency Counting
+- Phrase Based N-Grams
+- Tensor Decomposition
+- Factor Comparsion
 ** Related Work
+- Keyword Influence Models
+- N-Gram Analysis
+- Frequency Markers and PCA Based Approaches
+- Tensor Decomposition and Algorithms
+
 * Approach
 ** Background Information for Tensors
+- Tensors as Geometric Objects
+- Tensors as Arrays
+- Tensor Decompositions and Their Relationships
+  - PCA
+  - Tucker
+  - PARAFAC/CANDECOMP
+- Non-Negativity Constraints
+
 ** Model Formulation
+- Tensor Representation of the Document
+- Decomposition Constraints
+- Factor Comparison
+- Assigning Weights
+
 ** Justification of the Model
+- Frequency Counting is a Stanard Approach to Text Mining
+- N-Grams convey information about structure and content
+- Tensor Factor Properties
+  - Correlation and Separation
+  - Semantic Structure Retention
+  - Cross - Segment Comparison
+
 ** Filtering Techniques
+- Excluding Common Factors
+- Excluding Based on Signficance
+
 ** Implementation Challenges
+- Sparse Tensors
+- Size of the Tensors
+
 * Case Study 1 - Scientific Papers
 ** Corpus Description
 ** Estimating Ground Truth from Citations
 ** Applying the Model
 ** Results
+
 * Case Study 2 - Shakesperean Authorship
 ** Corpus Description
 ** Other Studies on Collaborators
 ** Applying Tensor Decomposition to the Shakespeare Problem
 ** Results
+
 * Conclusions and Future Work
 ** Model Performance Summary
 ** Possible Areas for Improvement
