Correcting small spelling error in the adler2009 citation.

--- a/notebook/literature.org
+++ b/notebook/literature.org
@@ -8,7 +8,7 @@
 |---------+--------------------------------------------|
 | File    | 0910.3529-Citation Statistics.pdf          |
 | Authors | Robert Adler, John Ewing, and Peter Taylor |
-| Cite    | addler2009                                 |
+| Cite    | adler2009                                  |
 |---------+--------------------------------------------|
 
 - Use and abuse of citation statistics in the evaluation of scientific
