Corrected bibtex error.

--- a/sources.bib
+++ b/sources.bib
@@ -160,7 +160,7 @@ url="https://doi.org/10.1007/BF02310791"
 @article {bro2003,
 author = {Bro, Rasmus and Kiers, Henk A. L.},
 title = {A new efficient method for determining the number of components in PARAFAC models},
-year="2003"
+year="2003",
 journal = {Journal of Chemometrics},
 }
 @article{papalexakis2015,
@@ -171,7 +171,7 @@ pages = {5441-5445},
 title = {Fast efficient and scalable Core Consistency Diagnostic for
 the parafac decomposition for big sparse tensors}
 }
-@article {hitchcock1927
+@article {hitchcock1927,
 author = {Hitchcock, Frank L.},
 title = {The Expression of a Tensor or a Polyadic as a Sum of
 Products},
@@ -184,7 +184,7 @@ doi = {10.1002/sapm192761164},
 pages = {164--189},
 year = {1927},
 }
-@incollection{kruskal1989
+@incollection{kruskal1989,
  author = {Kruskal, J. B.},
  chapter = {Rank, Decomposition, and Uniqueness for 3-way and N-way Arrays},
  title = {Multiway Data Analysis},
@@ -345,11 +345,11 @@ eprint = {/oup/backfile/content_public/journal/dsh/29/2/10.1093/llc/fqt028/2/fqt
   organization={ACM}
 }
 @incollection{bader2007,
-  author      = "Bader, Brett W., Berry, Michael W., and Browne, Murray",
+  author      = "Bader, Brett and W. Berry, Michael W. and Browne, Murray",
   title       = "Discussion Tracking in Enron Email Using PARAFAC",
   editor      = "Berry, Michael W. and Castellanos, Malu",
-  booktitle   = "Survey of Text Mining"
-  publisher   = "Springer"
+  booktitle   = "Survey of Text Mining",
+  publisher   = "Springer",
   year        = 2007,
   pages       = "147-163",
   chapter     = 8,
