Added ams packages to base file.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,6 +1,7 @@
 \documentclass{book}
 \usepackage{subfiles}
-
+\usepackage{amsmath}
+\usepackage{amssymb}
 \begin{document}
 
 \subfile{chapters/01-Introduction}
