--- a/commands.tex
+++ b/commands.tex
@@ -1,7 +1,6 @@
 %Some commands so I don't have to keep doing crazy stuff
-\newcommand{\norm1}[1]{| #1 |}
-\newcommand{\norm2}[1]{|| #1 ||}
 \newcommand{\set}[1]{\mathrm{#1}}
 \newcommand{\mat}[1]{\mathrm{\bf #1}}
 \newcommand{\tens}[1]{\mathcal{#1}}
 \newcommand{\dsum}{\displaystyle\sum}
+\newcommand{\R}{\mathbb{R}}
