Added new commands

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -2,7 +2,9 @@
 \usepackage{subfiles}
 \usepackage{amsmath}
 \usepackage{amssymb}
+
 \begin{document}
+\input{commands}
 
 \subfile{chapters/01-Introduction}
 \subfile{chapters/02-Approach}
