Fixed an ampersand in a citation

--- a/sources.bib
+++ b/sources.bib
@@ -56,7 +56,7 @@ year = "2009"
 }
 @article{harshman1994,
 title = "PARAFAC: Parallel factor analysis",
-journal = "Computational Statistics & Data Analysis",
+journal = "Computational Statistics \& Data Analysis",
 volume = "18",
 number = "1",
 pages = "39 - 72",
@@ -379,4 +379,14 @@ eprint = {/oup/backfile/content_public/journal/dsh/29/2/10.1093/llc/fqt028/2/fqt
   pages={649--656},
   year={2012},
   publisher={Elsevier}
+}
+@article{kiers1991,
+  title={Hierarchical relations among three-way methods},
+  author={Kiers, Henk AL},
+  journal={Psychometrika},
+  volume={56},
+  number={3},
+  pages={449--470},
+  year={1991},
+  publisher={Springer}
 }
