Updating sybmolic links and formatting

--- a/ut-dissertation.tex
+++ b/ut-dissertation.tex
@@ -22,7 +22,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TO DO: FILL IN YOUR INFORMATION BELOW - READ THIS SECTION CAREFULLY
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Textual Influence Modelling Through Tensor Decomposition}     	% title of thesis/dissertation
+\title{Textual Influence Modeling Through Tensor Decomposition}     	% title of thesis/dissertation
 \author{Robert Lowe}                			% author's name
 \copyrightYear{2018}           				% copyright year of your thesis/dissertation
 \graduationMonth{August}        			% month of graduation of your thesis/dissertation
